--- a/.rtorrent.rc
+++ b/.rtorrent.rc
@@ -113,6 +113,8 @@ peer_exchange = yes
 # decent hash checking rate.
 #hash_max_tries = 10
 
+encoding_list = utf8
+
 ################################################################################
 
 # Set colors using the options below in .rtorrent.rc:
