use coretemp instead of thermal

--- a/.xmobarrc
+++ b/.xmobarrc
@@ -7,12 +7,11 @@ Config {
     commands = [
         Run Battery [] 300,
         Run MultiCpu ["-t", "CPU: <total0> <total1>"] 10,
-        Run Thermal "THM0" ["-t", "<temp>°C"] 100,
-        Run Thermal "THM1" ["-t", "<temp>°C"] 100,
+        Run CoreTemp ["-t", "<core0>°C, <core1>°C"] 100,
         Run Date "%Y-%m-%d, %H:%M" "date" 300,
         Run StdinReader
     ],
     sepChar = "%",
     alignSep = "}{",
-    template = "%StdinReader% }{ <fc=#87CEFA>%battery%</fc> | <fc=#F0E68C>%multicpu%</fc> | <fc=#00FF7F>%THM0%, %THM1%</fc> | <fc=#FFA500>%date%</fc>"
+    template = "%StdinReader% }{ <fc=#87CEFA>%battery%</fc> | <fc=#F0E68C>%multicpu%</fc> | <fc=#00FF7F>%coretemp%</fc> | <fc=#FFA500>%date%</fc>"
 }
