remove cpu freq

--- a/.xmobarrc
+++ b/.xmobarrc
@@ -6,12 +6,11 @@ Config {
     lowerOnStart = True,
     commands = [
         Run Battery [] 300,
-        Run MultiCpu ["-t", "CPU: <total0> <total1>"] 10,
         Run CoreTemp ["-t", "<core0>°C, <core1>°C"] 100,
         Run Date "%Y-%m-%d, %H:%M" "date" 300,
         Run StdinReader
     ],
     sepChar = "%",
     alignSep = "}{",
-    template = "%StdinReader% }{ <fc=#87CEFA>%battery%</fc> | <fc=#F0E68C>%multicpu%</fc> | <fc=#00FF7F>%coretemp%</fc> | <fc=#FFA500>%date%</fc>"
+    template = "%StdinReader% }{ <fc=#87CEFA>%battery%</fc> | <fc=#00FF7F>%coretemp%</fc> | <fc=#FFA500>%date%</fc>"
 }
