--- a/.fonts.conf
+++ b/.fonts.conf
@@ -1,42 +1,41 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
- <match target="font" >
-  <edit mode="assign" name="rgba" >
+ <match target="font">
+  <edit mode="assign" name="rgba">
    <const>rgb</const>
   </edit>
  </match>
- <match target="font" >
-  <edit mode="assign" name="hinting" >
+ <match target="font">
+  <edit mode="assign" name="hinting">
    <bool>true</bool>
   </edit>
  </match>
- <match target="font" >
-  <edit mode="assign" name="hintstyle" >
+ <match target="font">
+  <edit mode="assign" name="hintstyle">
    <const>hintmedium</const>
   </edit>
  </match>
- <match target="font" >
-  <edit mode="assign" name="antialias" >
+ <match target="font">
+  <edit mode="assign" name="antialias">
    <bool>true</bool>
   </edit>
  </match>
-
  <match target="font">
-  <test qual="any" name="family">
+  <test name="family" qual="any">
    <string>Unibit</string>
   </test>
   <edit name="spacing">
    <const>dual</const>
   </edit>
  </match>
-
- <match target="font" >
-  <test compare="more" name="weight" >
+ <match target="font">
+  <test compare="more" name="weight">
    <const>medium</const>
   </test>
-  <edit mode="assign" name="autohint" >
+  <edit mode="assign" name="autohint">
    <bool>false</bool>
   </edit>
  </match>
+ <dir>~/.fonts</dir>
 </fontconfig>
