--- a/.rtorrent.rc
+++ b/.rtorrent.rc
@@ -2,6 +2,8 @@
 # ~/.rtorrent.rc and enable/modify the options as needed. Remember to
 # uncomment the options you wish to enable.
 
+system.file_allocate.set = yes
+
 # Maximum and minimum number of peers to connect to per torrent.
 #min_peers = 50
 max_peers = 300
