add new font config and vimperator config

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -2,6 +2,11 @@
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
  <match target="font">
+   <edit name="autohint" mode="assign">
+     <bool>true</bool>
+   </edit>
+ </match>
+ <match target="font">
   <edit mode="assign" name="rgba">
    <const>rgb</const>
   </edit>
