--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -128,7 +128,7 @@ mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 #-------------------------------------------
 # Image Viewing:
 #-------------------------------------------
-mime ^image, has feh,    X, flag f = feh_rifle.rb "$1"
+mime ^image, has feh,    X, flag f = feh_rifle "$1"
 mime ^image, has eog,    X, flag f = eog -- "$@"
 mime ^image, has sxiv,   X, flag f = sxiv -- "$@"
 mime ^image, has mirage, X, flag f = mirage -- "$@"
