update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,4 @@
 set-window-option -g utf8 on
 set-window-option -g mode-keys vi
+set-option -g default-terminal screen-256color
+set-environment -g TERMINFO /home/jyyou/.terminfo
