--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,6 @@
-set-window-option -g utf8 on
-set-window-option -g mode-keys vi
-set-option -g default-terminal screen-256color
-set-environment -g TERMINFO /home/jyyou/.terminfo
+setw -g utf8 on
+setw -g mode-keys vi
+set -g default-terminal screen-256color
+setenv -g TERMINFO /home/jyyou/.terminfo
+set -g history-limit 10000
+set -g status-utf8 on
