--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -109,7 +109,10 @@ ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
 #--------------------------------------------
 # Video/Audio with a GUI
 #-------------------------------------------
+mime ^video|audio, has mpv, X, flag f = mpv "$@"
+ext  rmvb,         has mpv, X, flag f = mpv "$@"
 mime ^video|audio, has smplayer, X, flag f = smplayer "$@"
+ext  rmvb,         has smplayer, X, flag f = smplayer "$@"
 mime ^video|audio, has gmplayer, X, flag f = gmplayer -- "$@"
 mime ^video,       has mplayer2, X, flag f = mplayer2 -- "$@"
 mime ^video,       has mplayer2, X, flag f = mplayer2 -fs -- "$@"
