--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -42,5 +42,33 @@
    <bool>false</bool>
   </edit>
  </match>
+
  <dir>~/.fonts</dir>
+
+ <match target="pattern">
+  <test name="family" compare="eq">
+   <string>serif</string>
+  </test>
+  <edit name="family" mode="append">
+   <string>Noto Serif CJK TC</string>
+  </edit>
+ </match>
+
+ <match target="pattern">
+  <test name="family" compare="eq">
+   <string>sans-serif</string>
+  </test>
+  <edit name="family" mode="append">
+   <string>Noto Sans CJK TC</string>
+  </edit>
+ </match>
+
+ <match target="pattern">
+  <test name="family" compare="eq">
+   <string>monospace</string>
+  </test>
+  <edit name="family" mode="append">
+   <string>Noto Sans Mono CJK TC</string>
+  </edit>
+ </match>
 </fontconfig>
